--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="graph on a laptop"
+            <img src="./assets/images/online-reputation-management.jpg" alt="picture of a graph on a laptop"
             class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -42,7 +42,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="social media tags"
+            <img src="./assets/images/social-media-marketing.jpg" alt="picture of social media tags"
             class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -53,7 +53,7 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="checkerboard lightbulb"
+            <img src="./assets/images/lead-generation.png" alt="picture of a checkerboard lightbulb"
             />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -61,7 +61,7 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="checkerboard lightbulb head with a tie"
+            <img src="./assets/images/brand-awareness.png" alt="picture of a checkerboard lightbulb head with a tie"
             />
             <p> 
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -69,7 +69,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="checkerboard setting icon"
+            <img src="./assets/images/cost-management.png" alt="picture of a checkerboard setting icon"
              />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
